Add types for creating experiments from similarity thresholds
