# wrapper/src/api/server/types/SimilarityThresholdOperator.ts
@@ -1,38 +1,0 @@
-import { SimilarityThresholdFunctionValues } from './';
-
-/**
- *
- * @export
- * @interface SimilarityThresholdOperator
- */
-export interface SimilarityThresholdOperator {
-  /**
-   *
-   * @type {SimilarityThresholdFunctionValues}
-   * @memberof SimilarityThresholdOperator
-   */
-  left: SimilarityThresholdFunctionValues;
-  /**
-   *
-   * @type {SimilarityThresholdFunctionValues}
-   * @memberof SimilarityThresholdOperator
-   */
-  right: SimilarityThresholdFunctionValues;
-  /**
-   *
-   * @type {string}
-   * @memberof SimilarityThresholdOperator
-   */
-  operator: SimilarityThresholdOperatorOperatorEnum;
-}
-
-/**
- * @export
- * @enum {string}
- */
-export enum SimilarityThresholdOperatorOperatorEnum {
-  Add = 'ADD',
-  Subtract = 'SUBTRACT',
-  Multiply = 'MULTIPLY',
-  Divide = 'DIVIDE',
-}
