# wrapper/src/api/server/types/index.ts
@@ -11,9 +11,12 @@ export * from './DatasetRequests';
 export * from './DatasetValues';
 export * from './Experiment';
 export * from './ExperimentAllOf';
+export * from './ExperimentConfigItem';
+export * from './ExperimentConfigItemSimilarity';
 export * from './ExperimentId';
 export * from './ExperimentIntersectionCount';
 export * from './ExperimentIntersectionItem';
+export * from './ExperimentIntersectionItemAllOf';
 export * from './ExperimentRequests';
 export * from './ExperimentValues';
 export * from './FileResponse';
@@ -21,7 +24,7 @@ export * from './Metric';
 export * from './SimilarityThresholdFunction';
 export * from './SimilarityThresholdFunctionAllOf';
 export * from './SimilarityThresholdFunctionId';
+export * from './SimilarityThresholdFunctionOperator';
 export * from './SimilarityThresholdFunctionValues';
-export * from './SimilarityThresholdOperator';
 export * from './SimilarityThresholdRequests';
 export * from './util';
